# SmartEmails

./: .env.example  .gitignore  FIXES_SUMMARY.md  README.md  SmartComponse_PowerAutomateFlow.json  SmartEmails_PowerAutomateFlow.json  openapi.yaml.backup  pyproject.toml  requirements.txt  setup.ps1  setup.py  setup_email_ai.py  test_email_ai.py
.github/workflows/: deploy.yml
docs/: README.md  api-reference.md  api.md  index.md
src/: config.py  main.py  settings.py
src/api/: email_ai_endpoint.py
src/models/: request_models.py
src/services/: attachment_service.py  email_generation.py  openai_service.py  teams_service.py  utils.py
