
[tool.poetry]
name = "smart-gold-smart-compose"
version = "0.1.0"
description = "A FastAPI application to replicate the Power Automate flow for generating email replies."
authors = ["André Jácome Silva <andre.silva@goldenergy.pt>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = "^2.6.1"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.0.0"
openai = "^1.12.0"
httpx = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
